# internal/delivery/http/response/response.go
@@ -1,0 +1,18 @@
+package response
+
+import (
+	"encoding/json"
+	"net/http"
+)
+
+func JSON(w http.ResponseWriter, status int, data any) {
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(status)
+	json.NewEncoder(w).Encode(data)
+}
+
+func Error(w http.ResponseWriter, status int, message string) {
+	JSON(w, status, map[string]string{
+		"error": message,
+	})
+}
